--- a/Patientor/Backend/package.json
+++ b/Patientor/Backend/package.json
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.23.8"
   }
 }
